Fixed lint issues in psl-core with numeric type conversions.