@@ -328,7 +328,7 @@ public class PostgreSQLDriver implements DatabaseDriver {
 
                 for (int i = 1; i < histogram.length(); i++) {
                     bounds.add(convertHistogramBound(histogram.get(i)));
-                    counts.add(new Integer(bucketCount));
+                    counts.add(Integer.valueOf(bucketCount));
                 }
             }
         }
@@ -347,7 +347,7 @@ public class PostgreSQLDriver implements DatabaseDriver {
                     double proportion = ((Number)mostCommonCounts.get(i)).doubleValue();
                     int count = Math.max(1, (int)(proportion * rowCount));
 
-                    mostCommonHistogram.put(convertHistogramBound(mostCommonVals.get(i)), new Integer(count));
+                    mostCommonHistogram.put(convertHistogramBound(mostCommonVals.get(i)), Integer.valueOf(count));
                 }
             }
         }
@@ -392,7 +392,7 @@ public class PostgreSQLDriver implements DatabaseDriver {
                 currentCommonIndex++;
 
                 int index = counts.size() - 1;
-                counts.set(index, new Integer(counts.get(index).intValue() + mostCommonHistogram.get(currentCommonValue).intValue()));
+                counts.set(index, Integer.valueOf(counts.get(index).intValue() + mostCommonHistogram.get(currentCommonValue).intValue()));
 
                 continue;
             }
@@ -412,15 +412,15 @@ public class PostgreSQLDriver implements DatabaseDriver {
 
             currentCommonIndex++;
 
-            counts.set(bucketIndex, new Integer(counts.get(bucketIndex).intValue() + mostCommonHistogram.get(currentCommonValue).intValue()));
+            counts.set(bucketIndex, Integer.valueOf(counts.get(bucketIndex).intValue() + mostCommonHistogram.get(currentCommonValue).intValue()));
         }
     }
 
     private Comparable convertHistogramBound(Object bound) {
         if (bound instanceof Long) {
-            return new Integer(((Long)bound).intValue());
+            return Integer.valueOf(((Long)bound).intValue());
         } else if (bound instanceof Integer) {
-            return new Integer(((Integer)bound).intValue());
+            return Integer.valueOf(((Integer)bound).intValue());
         } else {
             return bound.toString();
         }
